<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.pi.projectinclusion.auth.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignUpActivity">


        <androidx.cardview.widget.CardView
            android:id="@+id/cvBackUser"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/margin_top"
            android:backgroundTint="@color/back_background_color"
            android:orientation="horizontal"
            app:cardCornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBackUser"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:padding="3dp"
                android:src="@drawable/ic_path_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/g20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />


        <TextView
            android:id="@+id/tvGreeting1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:fontFamily="@font/metropolis_semibold"
            android:orientation="vertical"
            android:text="@string/key_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/heading_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/g20" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:fontFamily="@font/metropolis_light"
            android:text="@string/signup_header"
            android:textSize="@dimen/subheading_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting1" />


        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/field_username"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2" />


        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:background="@drawable/background_edittext"
            app:layout_constraintTop_toBottomOf="@id/tvUsername">


            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_username_icon"
                android:drawablePadding="12dp"
                android:hint="@string/error_enter_username"
                android:maxLength="50"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:text="@={viewmodel.usernameSignup}"
                android:textColorHint="@color/border_background_color"
                android:textSize="14sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/password_txt"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llEmail" />


        <RelativeLayout
            android:id="@+id/rlPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:background="@drawable/background_edittext"
            app:layout_constraintTop_toBottomOf="@id/tvPass">


            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawablePadding="12dp"
                android:hint="New password"
                android:maxLength="10"
                android:paddingLeft="12dp"
                android:singleLine="true"
                android:text="@={viewmodel.passwordSignup}"
                android:textColorHint="@color/border_background_color"
                android:textSize="14sp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tvConfirmPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:fontFamily="@font/metropolis_semibold"
            android:text="@string/confirm_pass_txt"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlPass" />


        <RelativeLayout
            android:id="@+id/rlConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:background="@drawable/background_edittext"
            app:layout_constraintTop_toBottomOf="@id/tvConfirmPass">

            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/etPassConfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawablePadding="12dp"
                android:hint="@string/hint_reenter_pass"
                android:maxLength="10"
                android:paddingLeft="12dp"
                android:singleLine="true"
                android:text="@={viewmodel.confirmPasswordSignup}"
                android:textColorHint="@color/border_background_color"
                android:textSize="14sp" />


        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/field_margins"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/field_margins"
            android:layout_marginBottom="30dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/rlConfirmPass">

            <RelativeLayout
                android:id="@+id/signup_continue_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/button_background">

                <TextView
                    android:id="@+id/crt_acnt_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/metropolis_light"
                    android:text="@string/create_accnt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"></TextView>

                <RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/circular_over_button">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"></ImageView>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <ProgressBar
            android:id="@+id/signup_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:layout_marginTop="323dp"
            android:layout_marginEnd="200dp"
            android:layout_marginBottom="271dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


        <FrameLayout
            android:id="@+id/flSignUpContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:visibility="gone" />

        <!-- <ProgressBar
             android:id="@+id/pbSignUp"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:visibility="gone"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>